@@ -492,9 +492,9 @@ itcl_class Retriever& {
         pack ${w}.checkbtns -in ${w}.top -side bottom -fill x -padx 10m -pady 3m
     }
     proc warning_many_matches {} {
-        tk_dialog_with_widgets .retr-info [get_indep String ManyMatchesTitle]\
-          [get_indep String ManyMatchesINFO] info_image 0 \
-          "Retriever&::add_donot_call_checkbutton" [get_indep String Ok]
+        ttk_dialog_with_widgets .retr-info [get_indep String ManyMatchesTitle]\
+          [get_indep String ManyMatchesINFO] info ok ok \
+          "Retriever&::add_donot_call_checkbutton" ok [get_indep String Ok]
     }
 
     #search item with following prototype
