@@ -1,3 +1,4 @@
+(ENHANCE) Made the "Source-Navigator has found more than one match" warning use ttk_dialog_with_widges
 (ENHANCE) Made sn_error_dialog use TtkDialog::MessageBox
 (INTERNAL) Port sn_wait_dialog to use sn_ttk_buttons
 (ENHANCE) Port the "About" dialog to Ttk
